--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -474,25 +474,15 @@ For the task relevant part, we found self-related conditions were performed bett
 
 Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. In contrast the \emph{d} prime was smaller when shapes were associated with good other than with neutral other or bad other. See Figure \ref{fig:plot-exp4a-BGLM}.
 
-\hypertarget{results}{%
-\section{Results}\label{results}}
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4b-BGLM-1.pdf}
+\caption{\label{fig:plot-exp4b-BGLM}exp4a: Results of Bayesian GLM analysis.}
+\end{figure}
 
-\hypertarget{effect-of-moral-valence}{%
-\subsection{Effect of moral valence}\label{effect-of-moral-valence}}
+In this task, we found shapes associated with good person conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
 
-\hypertarget{interaction-between-valence-and-self-reference}{%
-\subsection{Interaction between valence and self-reference}\label{interaction-between-valence-and-self-reference}}
-
-In this part, we combined the experiments that explicitly manipulated the self-reference and valence, which includes 3a, 3b, 6b, 7a, and 7b. For the positive versus negative contrast, data were from five experiments with 178 participants; for positive versus neutral and neutral versus negative contrasts, data were from three experiments ( 3a, 3b, and 6b) with 108 participants.
-
-In most of these experiments, the interaction between self-reference and valence was significant (see results of each experiment in supplementary materials). In the mini-meta-analysis, we analyzed the valence effect for self-referential condition and other-referential condition separately.
-
-\hypertarget{generalizibility-of-the-valence-effect}{%
-\subsection{Generalizibility of the valence effect}\label{generalizibility-of-the-valence-effect}}
-
-In this part, we reported the results from experiment 4 in which either moral valence or self-reference were manipulated as task-irrelevant stimuli.
-
-For experiment 4b, when valence was the target and the identity was task-irrelevant, we found a strong valence effect (see supplementary results and Figure \ref{fig:plot-exp4b-effect-1}, Figure \ref{fig:plot-exp4b-effect-2}).
+Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside as task-irrelevant stimuli than with ``other'' inside (mean\_diff = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (mean\_diff = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (mean\_diff = -.05, 95\% CI{[}-.18, .09{]}). The same trend appear for the RT data. For shapes associated with good person, an ``self'' inside will reduce the RTs as compared with when a ``other'' inside the shape (mean\_diff = -55 ms, 95\%CI{[}-75, -35{]}, p \textless{} 0.0001), but this effect did not occure when the shapes were associated neutral (mean\_dfiff = 10, 95\% CI {[}1, 20{]}) or bad (mean\_diff = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4b-BGLM}.
 
 \hypertarget{self-reported-personal-distance}{%
 \subsection{Self-reported personal distance}\label{self-reported-personal-distance}}
