--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -464,25 +464,19 @@ See Figure \ref{fig:plot-bayes2}.
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance will eliminate the effect observed in previous experiment.
 
-\begin{figure}
-\centering
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4a-BGLM-1.pdf}
-\caption{\label{fig:plot-exp4a-BGLM}exp4a: Results of Bayesian GLM analysis.}
-\end{figure}
-
 For the task relevant part, we found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
 
-Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. In contrast the \emph{d} prime was smaller when shapes were associated with good other than with neutral other or bad other. See Figure \ref{fig:plot-exp4a-BGLM}.
+Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. In contrast the \emph{d} prime was smaller when shapes were associated with good other than with neutral other or bad other. See Figure \ref{fig:plot-exp4-all}.
 
 \begin{figure}
 \centering
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4b-BGLM-1.pdf}
-\caption{\label{fig:plot-exp4b-BGLM}exp4a: Results of Bayesian GLM analysis.}
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4-all-1.pdf}
+\caption{\label{fig:plot-exp4-all}exp4: Results of Bayesian GLM analysis.}
 \end{figure}
 
 In this task, we found shapes associated with good person conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
 
-Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside as task-irrelevant stimuli than with ``other'' inside (mean\_diff = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (mean\_diff = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (mean\_diff = -.05, 95\% CI{[}-.18, .09{]}). The same trend appear for the RT data. For shapes associated with good person, an ``self'' inside will reduce the RTs as compared with when a ``other'' inside the shape (mean\_diff = -55 ms, 95\%CI{[}-75, -35{]}, p \textless{} 0.0001), but this effect did not occure when the shapes were associated neutral (mean\_dfiff = 10, 95\% CI {[}1, 20{]}) or bad (mean\_diff = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4b-BGLM}.
+Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside as task-irrelevant stimuli than with ``other'' inside (mean\_diff = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (mean\_diff = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (mean\_diff = -.05, 95\% CI{[}-.18, .09{]}). The same trend appear for the RT data. For shapes associated with good person, an ``self'' inside will reduce the RTs as compared with when a ``other'' inside the shape (mean\_diff = -55 ms, 95\%CI{[}-75, -35{]}, p \textless{} 0.0001), but this effect did not occure when the shapes were associated neutral (mean\_dfiff = 10, 95\% CI {[}1, 20{]}) or bad (mean\_diff = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{self-reported-personal-distance}{%
 \subsection{Self-reported personal distance}\label{self-reported-personal-distance}}
