writing intro, first two paragraphs

--- a/endnote.bib
+++ b/endnote.bib
@@ -544,7 +544,8 @@ Publisher: American Psychological Association},
 	file = {Springer Full Text PDF:/home/hcp4715/Zotero/storage/MVH6TEDR/McNeish and Wolf - 2020 - Thinking twice about sum scores.pdf:application/pdf}
 }
 
-@article{brady_mad_2020,
+@article{
+_mad_2020,
 	title = {The {MAD} Model of Moral Contagion: The Role of Motivation, Attention, and Design in the Spread of Moralized Content Online},
 	volume = {15},
 	issn = {1745-6916},
