--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,10 +1,10 @@
 ---
-title             : "Priorization of the morally good depends on self-relevance in perceptual matching"
+title             : "Priorization of the morally good in perceptual matching depends on self-relevance"
 shorttitle        : "Priorization of the morally good"
 
 author: 
   - name          : "Hu Chuan-Peng"
-    affiliation   : "1,2"
+    affiliation   : "1"
     corresponding : yes    # Define only one corresponding author
     address       : "School of Psychology, Nanjing Normal University, Ninghai Road 122, Gulou District, 210024 Nanjing, China"
     email         : "hcp4715@gmail.com"
@@ -78,15 +78,30 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 # Introduction
 
-[sentences in bracket are key ideas]
+ <!--[sentences in bracket are key ideas] -->
 
 social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
 
-Our information processing system had been evolved in a way that top-down factor can modulate the low-level processes. There are debates on whether perception can be penetrated by top-down factors.
+Previous studies have showed that the process of visual stimuli is prioritized because for various reasons: salient physical features, affective value or rewarding value [attention capture related papers]. However, to navigate in the social world, we also need to decide how to allocate our limited cognitive resources to the rich social information. Self-relevant, for sure. Recent studies showed that moral related information also prioritized (@brady_attentional_2020). Among all moral related information, character related information is also prioritized (@eiserbeck_visual_2020, @gantman_moral_2014). Studies used instantly acquired character related information to neutral faces and then tested these faces with various cognitive task, most studies found that neutral faces associated with negative social behavioral were prioritized as compared to neutral (and positive) [@anderson_visual_2011, @eiserbeck_visual_2020, but see @stein_no_2017]. 
 
-[Morality is the central of human social life]. People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. When experiencing these events, it always involves judging "good" or "bad", "right" or "wrong". Interestingly, by judging "right" or "wrong", people are implicitly judging the moral character of involved parties as "good" vs. "bad" [@uhlmann_person-centered_2015]. Therefore, moral character is the central theme in moral life. The importance of moral character was also supported by the extensive studies from person perception and social evaluation, where morality is a basic dimension for social evaluation [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017]. 
+Why the character related information are prioritized? One possibility is that the character of others helps us to distinguish the potential cooperators and free-riders. That is, we will avoid potential free-riders and approach to potential cooperators. This value-based explanation had been used to account for many results [], yet few studies directly tested the value-based account. In moral psychology, however, there was a different view on why we judge other as good or bad: we doing so because we want to know who is us and who is other []. In other words, character is a signal of social categorization, indicating whether we can treat someone as extension of the self. 
 
-Given the importance of moral character in social life, it would not be a surprise if individual prioritize moral character related information. Indeed, studies have shown that people can form a rapid judgment of others' moral character, "trustworthiness", by merely viewing faces of others. Beyond that, moral behaviors are deemed as the most diagnostic feature of a person (@ ; @). Recent theorists further integrated the moral judgment and moral self-view, proposed a person-centered account for moral psychology, which focused on the individuals in moral evaluation instead of acts [@uhlmann_person-centered_2015]. Under this framework, previous seemingly contradicting phenomenons can be explained. For example, whether people decide to expose an unethical behavior depends on how their relationship of the target [e.g., @waytz_whistleblowers_2013]. 
+Social associative learning task: "Even minimal behavioral information, such as a single sentence, is sufficient for robust positive or negative associations with a person’s face (Bliss-Moreau, Barrett, & Wright, 2008; Falvello, Vinson, Ferrari, & Todorov, 2015; Todorov & Olson, 2008). This demonstrates the readiness and ease with which such affective learning occurs – even in cases where the veracity of the information is unclear (Baum, Rabovsky, Rose, & Abdel Rahman, 2018)."
+
+We designed a series of experiments to test these two hypotheses. 
+
+
+
+[quotes about moral character]
+
+
+People view a lot of news feed everyday, and the moral related information are more likely paid attention to and go viral on social media (@brady_attentional_2020). Most moral events are person-centered [@uhlmann_person-centered_2015], we are judging the moral character of individuals who involved in the moral event as "good" or "bad", and by condemning others or publicly showing our moral outrageous, we are signalling our own moral character, which is essential for us to living in the social world. 
+
+If moral character is so important and serves as a signal for social categorization, it may also exert influence on how we perceive these information in the first place. To investigate the role of moral character in perception processing, we adopted the social associative learning task, where participants first paired geometric shapes with different moral characters, and then perform a perceptual matching task. Why this happen? Previous studies proposed that  moral content were prioritized because they are motivational relevant and provide us information about the social world. We argue that moral related information were prioritized because it's importance for social categorization.
+
+[Moral character is the central theme in moral life]. People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. When experiencing these events, it always involves judging the moral character of individuals involved in as "good" or "bad". Even when we are judging the behavioral as "right" or "wrong", we are implicitly judging the moral character of involved parties as "good" vs. "bad" [@uhlmann_person-centered_2015]. The importance of moral character was also supported by the extensive studies from person perception and social evaluation, where morality is a basic dimension for social evaluation [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017]. 
+
+Given the importance of moral character in social life, it would not be a surprise if individual prioritize moral character related information, given the limited cognitive resources for processing the incoming information. Indeed, studies have shown that people can form a rapid judgment of others' moral character, "trustworthiness", by merely viewing faces of others. Beyond that, moral behaviors are deemed as the most diagnostic feature of a person (@ ; @). Recent theorists further integrated the moral judgment and moral self-view, proposed a person-centered account for moral psychology, which focused on the individuals in moral evaluation instead of acts [@uhlmann_person-centered_2015]. Under this framework, previous seemingly contradicting phenomenons can be explained. For example, whether people decide to expose an unethical behavior depends on how their relationship of the target [e.g., @waytz_whistleblowers_2013]. 
 
 The importance of moral character also means that individual has a strong motivation to maintain a moral self-view [@ellemers_psychology_2019]. Studies found that people maintain a positive moral self-view even after dishonest behavior [@monin_dynamic_2009] and that people evaluate themselves as morally superior to others [@klein_maybe_2016; @tappin_illusion_2017]. 
 
@@ -1599,16 +1614,18 @@ df_exp4a_sdt_m1_plot_diff <- df_exp4a_sdt_m1_plot %>%
                 diff_GB_dprm_O = dprime_Other_Good - dprime_Other_Bad,
                 diff_SO_dprm_G = dprime_Self_Good - dprime_Other_Good,
                 diff_SO_dprm_N =  dprime_Self_Neutral - dprime_Other_Neutral,
-                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad
+                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad,
+                diff_diff_GN_SO = diff_GN_dprm_S - diff_GN_dprm_O,
+                diff_diff_GB_SO = diff_GB_dprm_S - diff_GB_dprm_O,
+                diff_diff_BN_SO = diff_BN_dprm_S - diff_BN_dprm_O
                 ) %>%
   dplyr::select(`.chain`, `.iteration`, `.draw`,
-               diff_GN_dprm_S, diff_BN_dprm_S, diff_GB_dprm_S,
-               diff_GN_dprm_O, diff_BN_dprm_O, diff_GB_dprm_O, 
-               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B) %>%
-  tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_SO_dprm_B, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+               diff_GN_dprm_S:diff_diff_BN_SO) %>%
+  tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_diff_BN_SO, names_to = "term_diff", values_to =  "value") %>%  # wide to long
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_dprm_S', 'diff_GN_dprm_S', 'diff_BN_dprm_S', 
                                                          'diff_GB_dprm_O', 'diff_GN_dprm_O', 'diff_BN_dprm_O', 
-                                                         'diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B')))
+                                                         'diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B',
+                                                         'diff_diff_GN_SO', 'diff_diff_GB_SO', 'diff_diff_BN_SO')))
 p_exp4a_dprime1_diff_val <- df_exp4a_sdt_m1_plot_diff %>%
         dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
         dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
@@ -1654,6 +1671,26 @@ p_exp4a_dprime1_diff_id <- df_exp4a_sdt_m1_plot_diff %>%
         # scale_fill_manual(values = c('skyblue')) +   # note: only one value here, used blue here
         labs(x = expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' ')),
              y = expression("Contrasts (Self vs. Other)"))
+
+p_exp4a_dprime1_diff_diff <- df_exp4a_sdt_m1_plot_diff %>%
+        dplyr::filter(str_detect(term_diff, '_diff_')) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_GB", term_diff) ~ "GB",
+                                                   grepl("_GN", term_diff) ~"GN",
+                                                   grepl("_BN", term_diff) ~ "BN"),
+                      term_diff = factor(term_diff, levels = c("GN", "GB", "BN"))) %>%
+        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('skyblue', 'gray80'),
+                    breaks = c(TRUE, FALSE),
+                    name = "Effect" , labels = c("Yes", "No")) +
+        # scale_fill_manual(values = c('skyblue')) +   # note: only one value here, used blue here
+        labs(x = expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' ')),
+             y = expression("Difference (Self vs. Other) of difference (Valence)"))
 ```
 
 ```{r 4a_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
@@ -1741,14 +1778,18 @@ df_exp4a_m1_plot_rt_diff <- df_exp4a_m1_plot_rt %>%
                 diff_GB_O_RT_M = M_Other_Good - M_Other_Bad,
                 diff_SO_G_RT_M = M_Self_Good - M_Other_Good,
                 diff_SO_N_RT_M = M_Self_Neutral - M_Other_Neutral,
-                diff_SO_B_RT_M = M_Self_Bad - M_Other_Bad
+                diff_SO_B_RT_M = M_Self_Bad - M_Other_Bad,
+                diff_diff_GN_SO = diff_GN_S_RT_M - diff_GN_O_RT_M,
+                diff_diff_GB_SO = diff_GB_S_RT_M - diff_GB_O_RT_M,
+                diff_diff_BN_SO = diff_BN_S_RT_M - diff_BN_O_RT_M
                 ) %>%
   dplyr::select(`.chain`, `.iteration`, `.draw`,
-               diff_GN_S_RT_M:diff_SO_B_RT_M) %>%
-  tidyr::pivot_longer(cols = diff_GN_S_RT_M:diff_SO_B_RT_M, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+               diff_GN_S_RT_M:diff_diff_BN_SO) %>%
+  tidyr::pivot_longer(cols = diff_GN_S_RT_M:diff_diff_BN_SO, names_to = "term_diff", values_to =  "value") %>%  # wide to long
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_S_RT_M', 'diff_BN_S_RT_M', 'diff_GB_S_RT_M', 
                                                          'diff_GN_O_RT_M', 'diff_BN_O_RT_M', 'diff_GB_O_RT_M', 
-                                                         'diff_SO_G_RT_M', 'diff_SO_N_RT_M', 'diff_SO_B_RT_M')))
+                                                         'diff_SO_G_RT_M', 'diff_SO_N_RT_M', 'diff_SO_B_RT_M',
+                                                         'diff_diff_GN_SO', 'diff_diff_GB_SO', 'diff_diff_BN_SO')))
 p_exp4a_rt_diff_val <- df_exp4a_m1_plot_rt_diff %>%
         dplyr::filter(str_detect(term_diff, '_S_RT_M|_O_RT_M')) %>%
         dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
@@ -1795,6 +1836,25 @@ p_exp4a_rt_diff_id <- df_exp4a_m1_plot_rt_diff %>%
         labs(x = expression("Self-referential effect on RTs "),
              y = expression("Contrasts (Self vs. Other)"))
 
+p_exp4a_rt1_diff_diff <- df_exp4a_m1_plot_rt_diff %>%
+        dplyr::filter(str_detect(term_diff, '_diff_')) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_GB", term_diff) ~ "GB",
+                                                   grepl("_GN", term_diff) ~"GN",
+                                                   grepl("_BN", term_diff) ~ "BN"),
+                      term_diff = factor(term_diff, levels = c("GN", "GB", "BN"))) %>%
+        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        # dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('skyblue', 'gray80'),
+                    breaks = c(TRUE, FALSE),
+                    name = "Effect" , labels = c("Yes", "No")) +
+        # scale_fill_manual(values = c('skyblue')) +   # note: only one value here, used blue here
+        labs(x = expression("Interaction effect on RT"),
+             y = expression("Difference (Self vs. Other) of difference (Valence)"))
 ```
 
 ```{r plot-exp4a-BGLM, fig.cap="exp4a: Results of Bayesian GLM analysis.",  fig.height=9, fig.width=12, warning=FALSE}
@@ -2064,7 +2124,7 @@ p3 <- (p_exp4b_rt1 + exp4b_sdt_p ) + plot_layout(nrow = 1, guides = "collect")
 p4 <- (p_exp4b_rt_diff_id + p_exp4b_dprime1_diff_id) + plot_layout(nrow = 1, byrow = FALSE, guides = "collect") 
 ```
 
-```{r plot-exp4-all, fig.cap="exp4: Results of Bayesian GLM analysis.",  fig.height=9, fig.width=12, warning=FALSE}
+```{r plot-exp4-all, fig.cap="exp4: Results of Bayesian GLM analysis.",  fig.height=9, fig.width=15, warning=FALSE}
 library(patchwork)
 
 design <- "
@@ -2086,7 +2146,7 @@ p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_
 
 In this task, we found shapes associated with good person conditions were performed better than other-related conditions, on both *d* prime and reaction times.
 
-Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the *d* prime was greater when shapes had an "self" inside as task-irrelevant stimuli than with "other" inside (mean_diff = 0.14, 95% credible intervals [-0.02, 0.31], BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with "neutral" (mean_diff = 0.04, 95% CI [-.11, .18]) or "bad" person (mean_diff = -.05, 95% CI[-.18, .09]). The same trend appear for the RT data. For shapes associated with good person, an "self" inside will reduce the RTs as compared with when a "other" inside the shape (mean_diff = -55 ms, 95%CI[-75, -35], p < 0.0001), but this effect did not occure when the shapes were associated neutral (mean_dfiff = 10, 95% CI [1, 20]) or bad (mean_diff = 5, 95%CI [-16, 27]) person. See Figure \@ref(fig:plot-exp4-all).
+Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the *d* prime was greater when shapes had an "self" inside as task-irrelevant stimuli than with "other" inside (mean_diff = 0.14, 95% credible intervals [-0.02, 0.31], BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with "neutral" (mean_diff = 0.04, 95% CI [-.11, .18]) or "bad" person (mean_diff = -.05, 95% CI[-.18, .09]). The same trend appear for the RT data. For shapes associated with good person, an "self" inside will reduce the RTs as compared with when a "other" inside the shape (mean_diff = -55 ms, 95%CI[-75, -35], p < 0.0001), but this effect did not occur when the shapes were associated neutral (mean_dfiff = 10, 95% CI [1, 20]) or bad (mean_diff = 5, 95%CI [-16, 27]) person. See Figure \@ref(fig:plot-exp4-all).
 
 ## Self-reported personal distance
 
