revised first two paragraphs

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -82,11 +82,24 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
 
-Previous studies have showed that the process of visual stimuli is prioritized because for various reasons: salient physical features, affective value or rewarding value [attention capture related papers]. However, to navigate in the social world, we also need to decide how to allocate our limited cognitive resources to the rich social information. Self-relevant, for sure. Recent studies showed that moral related information also prioritized (@brady_attentional_2020). Among all moral related information, character related information is also prioritized (@eiserbeck_visual_2020, @gantman_moral_2014). Studies used instantly acquired character related information to neutral faces and then tested these faces with various cognitive task, most studies found that neutral faces associated with negative social behavioral were prioritized as compared to neutral (and positive) [@anderson_visual_2011, @eiserbeck_visual_2020, but see @stein_no_2017]. 
+With limited cognitive resources, not all input information are processed equally. Visual stimuli, for example, are prioritized because for reasons: salient physical features, affective value or rewarding value [attention capture related papers]. To navigate in a social world, important social information shall also be prioritized. For example, self-relevant information. Beyond self-relevance, recent studies found that moral related information also prioritized (@brady_attentional_2020; @gantman_moral_2014). The center of morality is person (). Therefore it is not surprising that moral character information that associated with person having advantage in early information processing stage (@eiserbeck_visual_2020, @anderson_visual_2011). Studies used instantly acquired character related information to neutral faces and then tested these faces with various cognitive task, most studies found that neutral faces associated with negative social behavioral were prioritized as compared to neutral (and positive) (@anderson_visual_2011, @eiserbeck_visual_2020, but see @stein_no_2017), while other studies reported positive behavioral related faces were processed faster in attention (@shore_social_2013). 
 
-Why the character related information are prioritized? One possibility is that the character of others helps us to distinguish the potential cooperators and free-riders. That is, we will avoid potential free-riders and approach to potential cooperators. This value-based explanation had been used to account for many results [], yet few studies directly tested the value-based account. In moral psychology, however, there was a different view on why we judge other as good or bad: we doing so because we want to know who is us and who is other []. In other words, character is a signal of social categorization, indicating whether we can treat someone as extension of the self. 
+Yet it is unclear what is exact mechanism underlying effect of moral character on perceptual process. Understanding the mechanism may help us to reconcile the seemingly conflicting results. So far, researchers reported that effect of moral character can happen between moral and non-moral, or between negative and neutral, or between positive and neutral. For each results, there can be an explanation. For example, the valence effect of moral character can be explained as a valence effect that resemble to the results in emotional stimuli, the negativity effect can then be explained by threatening effect, last but not least, the positivity effect can be explained by value-based information process, i.e., we are avoiding potential free-riders and approaching to potential cooperators. This value-based explanation had been used to explain previous results (e.g., @shore_social_2013). 
 
-Social associative learning task: "Even minimal behavioral information, such as a single sentence, is sufficient for robust positive or negative associations with a person’s face (Bliss-Moreau, Barrett, & Wright, 2008; Falvello, Vinson, Ferrari, & Todorov, 2015; Todorov & Olson, 2008). This demonstrates the readiness and ease with which such affective learning occurs – even in cases where the veracity of the information is unclear (Baum, Rabovsky, Rose, & Abdel Rahman, 2018)."
+To clarify the effect and find a potential mechanism, we need first to find a robust effect that can be replicated. In the moral perceptual it is especially important because some of the experiments were not successfully replicated (see @stein_no_2017). After finding an stable effect, we could then explore the potential mechanisms. 
+
+Here we reported a series experiments that first confirmed a robust effect of moral character in a laboratory setting, then examined two competing explanation for that robust effect. 
+
+### Learning moral character instantly
+One challenge when trying to study moral character's effect on perception lies in the difficulty to operationalize the "moral" part. Morality is defined by context. Whether a behavior should be judged as immoral depends on a number of factors such as intention, consequences [cushman, young], also depends on cultural and social norm [fiske, haidt]. These factors, when studied in laboratory settings, were usually carefully manipulated in verbal scenarios. However, when studying the perceptual or attentional effect of morality, long scenarios do not suit. 
+
+Two approaches were used to solve this issue, both include using linguistic materials. The first approach combined moral words as materials and lexical decision task. For example @gantman_moral_2014, .....
+
+Another approach is using the associative learning paradigm. ...
+
+In moral psychology, however, there was a different view on why we judge other as good or bad: we doing so because we want to know who is us and who is other []. In other words, character is a signal of social categorization, indicating whether we can treat someone as extension of the self. 
+
+Social associative learning task: "Even minimal behavioral information, such as a single sentence, is sufficient for robust positive or negative associations with a person face (Bliss-Moreau, Barrett, & Wright, 2008; Falvello, Vinson, Ferrari, & Todorov, 2015; Todorov & Olson, 2008). This demonstrates the readiness and ease with which such affective learning occurs – even in cases where the veracity of the information is unclear (Baum, Rabovsky, Rose, & Abdel Rahman, 2018)."
 
 We designed a series of experiments to test these two hypotheses. 
 
