--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -93,9 +93,26 @@ Here we reported a series experiments that first confirmed a robust effect of mo
 ### Learning moral character instantly
 One challenge when trying to study moral character's effect on perception lies in the difficulty to operationalize the "moral" part. Morality is defined by context. Whether a behavior should be judged as immoral depends on a number of factors such as intention, consequences [cushman, young], also depends on cultural and social norm [fiske, haidt]. These factors, when studied in laboratory settings, were usually carefully manipulated in verbal scenarios. However, when studying the perceptual or attentional effect of morality, long scenarios do not suit. 
 
-Two approaches were used to solve this issue, both include using linguistic materials. The first approach combined moral words as materials and lexical decision task. For example @gantman_moral_2014, .....
+Two approaches were used to solve this issue, both include using linguistic materials. The first approach used moral words as materials. For example, @gantman_moral_2014 applied lexical decision task to both moral and non-moral words and found that moral words were responded faster. A follow-up study further revealed that the motivation of justice modulated the prioritization of moral words (@gantman_exposure_2016). The underlying mechanism for the prioritization effect observed in this paradigm was debated because it was confounded by semantic priming (@firestone_enhanced_2015). 
 
-Another approach is using the associative learning paradigm. ...
+Another approach is the associative learning paradigm, where participants first associate visual stimuli (e.g., faces) with moral behaviors, then perform a task that examine the differences between faces associated with different moral behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (both negative and neutral behaviors from both social and nonsocial domains) and then after participants to perform a binocular rivalry task, where a face and a building were presented to each eye and participant need to report the content of their vision by pressing buttons. They found that faces associated negative social behavior were dominant in the visual awareness for longer time than faces associated with other types of behaviors (but see @stein_no_2017). Similar paradigm were used to study trustworthiness of faces. In these studies, faces were associated with either sentences about trust related behavior (@eiserbeck_visual_2020) or with experienced interaction in a trust game (@shore_social_2013). This paradigm had been used not only for moral behaviors but also other affective meanings and found that the building such association requires minimal behavioral information (Bliss-Moreau, Barrett, & Wright, 2008; Falvello, Vinson, Ferrari, & Todorov, 2015; Todorov & Olson, 2008).
+
+The studies reviewed above suggested the using associative learning task might be a valid way to study moral character in lab settings. In the current study, we further simplify the paradigm by using geometric shapes as the visual stimuli instead of faces and use moral character words instead of sentences. Previous studies combined shapes and person label (e.g., self, friend, stranger) to study the self-referential effect and found a robust self-prioritization effect (@Sui_2012_JEPHPP). Here we modified the shape-person association paradigm to suit the moral character purpose. This paradigm has several advantages. first, it only used a few number of labels that represent different moral character, therefore control extra factors and avoid the semantic priming problem. Second, it use non-social visual stimuli, avoided the idiosyncratic features brought by using faces. Combined these two features, the task itself is simple and can combined with different cognitive tasks. 
+
+This paradigm consistent with the dynamic interactive model of person perception (@freeman_dynamic_2011). The dynamic interactive model of person perception proposed that the perceived personal traits are interactively linked with behavior and sensory stimuli. By activating some sensory stimuli, some person traits can be activated. The associative learning task reverse the process and directly linked the personal traits (moral traits in our case) with visual stimuli, therefore created a temporary but direct link between personal trait and visual stimuli.
+
+We tested the moral associative learning task by a series of experiments and found a robust effect moral positive effect.
+
+### Threat, value, or social-categorization
+
+After finding out a robust effect of moral positivity, the next question is how to reconcile our results with previous studies. As we mentioned, the results concerning the moral related perception studies already showed quite divergent results. While @gantman_moral_2014 found a valence effect of moral words without direction, @eiserbeck_visual_2020 reported a negative effect and @shore_social_2013 reported a positive effect. Note that @eiserbeck_visual_2020 only used negative and neutral stimuli, therefore it's difficult to tell whether there will be a positive effect if positive valence was also used. There are several possibilities for the positivity effect. 
+
+The threat account was not ..
+
+The value based account is appealing at first, there were strong evidence showing that positive stimuli are prioritized ...
+
+A third account that might explain this effect but paid less attention is the social categorization. Only recently did reseachers begin to investigate the perceptual process of social categorization. The results revealed a strong influence of social category on perception. This view as consistent with recent disucssion about the person-based morality.
+
 
 In moral psychology, however, there was a different view on why we judge other as good or bad: we doing so because we want to know who is us and who is other []. In other words, character is a signal of social categorization, indicating whether we can treat someone as extension of the self. 
 
